# skycruncher.io

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.workspace.ts
.agents/rules/: enummoduleconsistency.md  tdd.md
.github/workflows/: ci.yml
crates/: Cargo.toml  README.md  build.cmd
crates/.cargo/: config.toml
crates/conformance/: golden_extract.mjs  truth_fixture_extract.mjs
crates/conformance/mini_index/: gen_mini_index.mjs
crates/conformance/verify_oracle/: gen_fixtures.mjs  run_oracle.mjs
crates/solver-cli/: Cargo.toml
crates/solver-cli/src/: main.rs  solve_cmd.rs
crates/solver-contracts/: Cargo.toml
crates/solver-contracts/src/: config.rs  coordinates.rs  lib.rs  receipt.rs  request.rs  result.rs
crates/solver-core/: Cargo.toml  build.rs
crates/solver-core/src/: build_info.rs  coder.rs  coordinator.rs  deskcheck.rs  geom.rs  hypo.rs  lib.rs  prep.rs  quadgen.rs  refine.rs  runtime.rs  stars.rs  verify.rs
crates/solver-core/src/index/: band.rs  manifest.rs  mmap_arrow.rs  mod.rs  probe.rs  release_verify.rs
crates/solver-core/tests/: m1_release.rs  m1_stamp.rs  m1_star_grid.rs  m2_coder_conformance.rs  m2_coder_unit.rs  m3_verify_identity.rs  m3_verify_properties.rs  m4a_desk_check.rs  m4a_prep.rs  m4a_synthetic.rs  m4b_e2e.rs  m4b_guards.rs  m4b_hypo.rs  m4b_refine.rs  m4b_zero_alloc.rs
crates/solver-core/tests/fixtures/: coder_golden_scenes.json  quads_golden_g15u.json  truth_csm30799.json
crates/solver-core/tests/fixtures/mini_index/: detections_positive.json  detections_scrambled.json  detections_scrambled_big.json  truth.json
crates/solver-core/tests/fixtures/mini_index/mini-synth-g15u-1/: band_0.arrow  band_1.arrow  band_10.arrow  band_11.arrow  band_12.arrow  band_13.arrow  band_14.arrow  band_2.arrow  band_3.arrow  band_4.arrow  band_5.arrow  band_6.arrow  band_7.arrow  band_8.arrow  band_9.arrow  manifest.json  stars.arrow
crates/solver-core/tests/fixtures/mini_index/solver_stamps/: mini-synth-g15u-1.stamp.json
crates/solver-core/tests/fixtures/verify/: MANIFEST.json  comp_real_junk.json  comp_real_truth.json  comp_syn_1.json  comp_syn_2.json  real_junk_00.json  real_junk_01.json  real_junk_02.json  real_junk_03.json  real_junk_04.json  real_junk_05.json  real_junk_06.json  real_junk_07.json  real_junk_08.json  real_junk_09.json  real_truth.json  syn_bail.json  syn_bright_ties.json  syn_conflict_keep.json  syn_conflict_switch.json  syn_effarea_partial.json  syn_effarea_zero.json  syn_empty_nr0.json  syn_empty_nt0.json  syn_gamma_off.json  syn_gamma_on.json  syn_random_1.json  syn_random_2.json  syn_random_3.json  syn_ror_cull.json  syn_ror_off.json  syn_stop_early.json  syn_switch_retroactive.json  syn_tie_logfg_logd.json
docs/: LICENSING.md
docs/01-canonical/: DOCUMENTATION_POLICY.md  PRIVACY_DESIGN.md  SkyCruncher_Architecture.md  TEST_ARCHITECTURE.md  processing_flow.md
docs/02-specs/: DASHBOARD_DOCKING_SPEC.md  DATA_DISTRIBUTION_PLAN.md  DATA_PLANE_PLAN.md  DESKTOP_API_REMAP.md  RENDER_LOOP_CLOSURE_PLAN.md  RIG_IDENTITY_SPEC.md  SOLVER_CAPABILITY_REGISTRY.md  WEBGPU_RENDER_PLAN.md
docs/reference/: API.md  CARD_ASTROMETRY_WCS.md  CARD_ATMOSPHERE_OPTICS.md  CARD_COLOR_PHOTOCAL.md  CARD_IMAGE_SIGNAL.md  CARD_PHOTOMETRY_STATS.md  CARD_SOLVER_QUADS_SWEEP.md  CARD_STACKING_DRIZZLE.md  CARD_STARPLATES_DATAPLANE.md  CARD_TIME_EPHEMERIS.md  MCP.md  PERFORMANCE_NOTES.md  WIDGET_LIBRARY.md
public/atlas/: level_1_anchors.json  level_2_pattern.json
public/fonts/: OFL.txt
site/: .gitignore  README.md  database_summary.json  index.html  series.json
site/dag/: dag_app.js  dag_model.mjs  dag_style.css  index.html
src/: MainApp.tsx  fonts.css  index.css  main.tsx  shaders.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.testrail.conf.json  tauri.thin.conf.json
src-tauri/capabilities/: default.json  popout.json  testrail.json
src-tauri/icons/: icon.icns
src-tauri/native_gpu/: Cargo.toml
src-tauri/native_gpu/src/: buffer_pool.rs  demosaic.rs  lib.rs  reconstruct.rs
src-tauri/resources/starplates/: README.md
src-tauri/src/: greenfield_solve.rs  ipc_buffer.rs  lib.rs  main.rs  resource_manager.rs  star_data_fetch.rs
src-tauri/src/dem/: mod.rs
src-tauri/src/intelligence/: distortion_oracle.rs  mod.rs  terrain_oracle.rs
src-tauri/src/starplates/: arrow_io.rs  geometry.rs  manifest.rs  mod.rs  query.rs  store.rs  sync.rs
src-tauri/tests/: starplates_store.rs
src-tauri/tests/fixtures/starplates/: golden_cell_5-07044.arrow
src/config/: sampleFrameSource.ts  starDataSource.ts  storagePaths.test.ts  storagePaths.ts
src/data/: calibration_targets.ts
src/desktop/: updater.ts  window_fit.ts
src/engine/: CAMERAS.md  FILTERS.md  LENSES.md  MOUNTS.md  Mainlogic_entry.ts
src/engine/wasm_decode/: .gitignore  Cargo.toml  README.md
src/engine/wasm_decode/src/: lib.rs
src/tools/: test_env.ts.bak  threed.ts  verify_colormath.ts  verify_ephemeris.ts  verify_planckian.ts.bak
tools/: ForensicVisualizer.html  GroundTruthLabeler.html  download_gaia_async.js  download_gaia_dr3.js  download_gaia_dr3.py  format_atlas_rust.ts  tune_hyperparameters.ts  visualize_stars.html
tools/adaptive/: adaptive.config.ts  derive_search_priors.mjs  detect_harness.ts  frame_cache.ts  ground_truth.ts  image_conditions.ts  knob_optimizer.ts  mesh_detector.adaptivespec.ts  mesh_detector.ts  mesh_score.mjs  optimizer.adaptivespec.ts  run_adaptive.adaptivespec.ts  search_priors.adaptivespec.ts  smoke.adaptivespec.ts
tools/analytics/: confirm_stats.mjs  confirm_stats_test.mjs  corpus.default.json  publish_analytics.mjs  publish_analytics_test.mjs  residuals.mjs  residuals_test.mjs  solve_stats.mjs  solve_stats_test.mjs  wall_stats.mjs  wall_stats_test.mjs
tools/api/: README.md  a5_corpus.config.ts  a5_corpus.corpspec.ts  a5_summarize.mjs  api_harness.config.ts  arrow_sink.apispec.ts  (+20 more)
tools/rawlab/rawler_probe/: .gitignore  Cargo.toml  README.md
tools/rawlab/rawler_probe/src/: lib.rs  main.rs
(+1200 files in other folders)
