# Greenfield solver-core workspace — NESTED workspace, independent of the repo-root one.
# Build from THIS directory (see build.cmd / README.md): .cargo/config.toml discovery is cwd-based.
[workspace]
resolver = "2"
members = ["solver-contracts", "solver-core", "solver-cli"]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "UNLICENSED"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 1              # line tables for profiling release binaries

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3          # arrow/sha2 at full opt so full-release tests aren't 30x slow in dev
