[package]
name = "solver-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
solver-contracts = { path = "../solver-contracts" }
solver-core = { path = "../solver-core" }
clap = { version = "4.5", features = ["derive"] }
serde_json.workspace = true
anyhow = "1.0"
