# Standalone crate — deliberately NOT a member of the repo-root Cargo workspace
# (../../..: wasm_compute, src-tauri, native_gpu). The empty [workspace] table
# makes this its own workspace root so building here never touches the root
# workspace's lock/target. Same pattern as tools/rawlab/rawler_probe (the
# pre-stage crate this one promotes).
[workspace]

[package]
name = "wasm-decode"
version = "0.1.0"
edition = "2021"
description = "Decoder-cutover #14 parallel rail: rawler CR2/RAW full-frame CFA decode + deterministic integer demosaic, compiled to wasm32 (browser + Node). DEFAULT OFF — the live decode path stays libraw-wasm until the flag flips."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rawler = "0.7.2"
# wasm32 uuid js-feature fix (proven in the pre-stage, tools/rawlab/rawler_probe):
# rawler -> uuid (v4/v7) -> getrandom needs the browser backend on
# wasm32-unknown-unknown. Forcing uuid's "js" feature via a direct dep enables
# getrandom/js for the whole graph. Removing this line breaks the wasm32 build.
uuid = { version = "1", features = ["js"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# opt-level 2 matches the pre-stage probe profile the golden vectors were
# captured under (integer-only kernels: identical output at any opt level, but
# keep the build profile boring and reproducible).
opt-level = 2
